Improved alumni section

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -86,7 +86,7 @@
   <div class="container mb-5">
     <div class="text-center">
       <h2 class="display-5">Alumni</h2>
-      <p class="lead">We like to remember our ex-employees. This is Skyworkz Alumni</p>
+      <p class="lead">We like to remember our ex-employees. Meet our Alumni!</p>
     </div>
     <div class="row justify-content-md-center">
       <div class="col-md-12">
