Fixed tom's typo's

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -19,7 +19,7 @@
   <div class="container mb-5">
     <div class="text-center">
       <h2 class="display-5">Meet the people.</h2>
-      <p class="lead">Everyone is unique. But at Skyworkz we share the same passion that connect us together: technology. We are a diverse group of skilled professionals, who like to work together and learn from each other. We want to make a lasting impact.</p>
+      <p class="lead">Everyone is unique. But at Skyworkz we share the same passion that brings us together: technology. We are a diverse group of skilled professionals, who like to work together and learn from each other. We want to make a lasting impact.</p>
     </div>
     <div class="row justify-content-md-center">
       <div class="col-md-12">
