Negatieve term vervangen

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -3,7 +3,7 @@
   <div class="container content mb-5">
     <div class="text-center">
       <h2 class="display-5">Our core values</h2>
-      <p class="lead">At Skyworkz we are people oriented. This means a healthy work/life balance, but also being empathic and not judgmental. We are curious, innovative and we have a good sense of humour. And, most of all: we are techies.</p>
+      <p class="lead">At Skyworkz we are people oriented. This means a healthy work/life balance, but also being empathic and transparant. We are curious, innovative and we have a good sense of humour. And, most of all: we are techies.</p>
     </div>
     <div class="row">
       <div class="col-md-12">
