Added Nidhi's resume

--- a/layouts/partials/footer.html
+++ b/layouts/partials/footer.html
@@ -30,7 +30,7 @@
       </div>
       <div class="row mt-lg-3 mb-2">
         <div class="col-6">
-          <p class="copyrights-text">&copy; 2020 Skyworkz B.V.</a></p>
+          <p class="copyrights-text">&copy; Skyworkz B.V.</a></p>
         </div>
         <div class="col-6 pull-right">
           <ul class="list-inline social pull-right">
