--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -112,9 +112,9 @@
                   <img src="{{ $image300.RelPermalink }}" class="img-fluid">
                   <div class="overlay">
                     <div>
-                      <i class="fa fa-search fz-20"></i>
+                      {{/*  <i class="fa fa-search fz-20"></i>  */}}
                       <h2>{{ .name }}</h2>
-                      <p>{{ .teaser }}</p>
+                      {{/*  <p>{{ .teaser }}</p>  */}}
                     </div>
                   </div>
                 </a>
