team/alumni make alumni smaller

--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -82,11 +82,11 @@
   </div>
 </section>
 <!-- Alumni Start -->
-<section id="portfolio-work" class="bg-muted">
+<section id="portfolio-alumni" class="bg-muted">
   <div class="container mb-5">
     <div class="text-center">
       <h2 class="display-5">Alumni</h2>
-      <p class="lead">We like to remember our ex-employees. Meet our Alumni!</p>
+      <p class="lead">We like to remember our former team members. Meet our Alumni!</p>
     </div>
     <div class="row justify-content-md-center">
       <div class="col-md-12">
