--- a/layouts/partials/get-started.html
+++ b/layouts/partials/get-started.html
@@ -9,7 +9,7 @@
         </div>
         <div class="row">
           <div class="col-lg-6 mx-auto">
-              <a class="btn btn-info mt-lg-2" id="book" onclick="showZoomSidebar()">Book a phone call</a>
+              <a class="btn btn-info mt-lg-2" id="book" href="/contact">Book a phone call</a>
           </div>
         </div>
       </div>
