Make style of "schedule meeting" button consistent with other buttons

--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -44,8 +44,8 @@
       <div class="col-12">
           <div class="block">
             <h2>Book a meeting</h2>
-            <p>You can quickly book a meeting with Bas or call yourself using the button below:</p>
-            <a href="https://app.reclaim.ai/m/bas" target="_blank"><button>Schedule Meeting</button></a>
+            <p>You can quickly book a meeting or call with Bas yourself using the button below:</p>
+            <a class="btn btn-info mt-lg-2" id="book-meeting-bas" href="https://app.reclaim.ai/m/bas" target="_blank">Schedule Meeting</a>
           </div>
         </div>
         </div>
