add link to Cloud Coach questionnaire

--- a/layouts/partials/home-services.html
+++ b/layouts/partials/home-services.html
@@ -15,20 +15,20 @@
                 <div class="icon d-flex align-items-end"><img src="/img/icons/startup.svg" alt="..." class="img-fluid"></div>
                 <h3 class="h4">Cloud Kickstart</h3>
                 <p class="font-weight-light">A full cloud platform up and running in days, including CI/CD, monitoring and support.</p>
-                <a class="" href="/services/kickstart">Cloud Kickstart »</a>
+                <a class="" href="/services/kickstart">Explore Cloud Kickstart »</a>
               </div>
-           </div>  
- 
+           </div>
+
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/icons/developer.svg" alt="..." class="img-fluid"></div>
-                <h3 class="h4">Cloud Consultancy</h3>
-                <p class="font-weight-light">Long term or short term engagements: our consultants can help you with cloud related projects.</p>
-                <a class="" href="/services/consultancy">Hire a consultant »</a>
+                <h3 class="h4">Cloud Coach</h3>
+                <p class="font-weight-light">Our Cloud Coaches help you grow your startup into a healthy cloud-native company without breaking the bank.</p>
+                <a class="" href="/services/cloudcoach">Explore Cloud Coach »</a>
               </div>
             </div>
 
-            
+
             <div class="col-lg-4">
               <div class="box text-center">
                 <div class="icon d-flex align-items-end"><img src="/img/icons/training.svg" alt="..." class="img-fluid"></div>
