Removed diagonal styling

--- a/layouts/partials/diagonal.html
+++ b/layouts/partials/diagonal.html
@@ -1,5 +1,5 @@
-<div class="diagonal-box">
-	<div class="content">
+<div class="">
+	<div class="">
         <div class="testbox">blabla</div>
         <div class="testbox">blabla</div>
         <div class="testbox">blabla</div>
