--- a/layouts/partials/services.html
+++ b/layouts/partials/services.html
@@ -1,5 +1,5 @@
-<section class="py-lg-5 diagonal-box bg-white">
-  <div class="container content">
+<section class="py-lg-5 bg-white">
+  <div class="container">
       <div class="integrations">
         <div class="row">
           {{ $services := .Site.Data.services.content }}
