--- a/layouts/partials/contact.html
+++ b/layouts/partials/contact.html
@@ -1,7 +1,7 @@
 <!-- contact form start -->
 {{ with .Site.Params.contact }}
-<section id="contact-form" class="diagonal-box bg-white">
-  <div class="container content pt-5">
+<section id="contact-form" class="bg-white">
+  <div class="container pt-5">
     <div class="row">
       <div class="col-md-6 col-sm-12">
         <div class="block">
