--- a/layouts/partials/home-about.html
+++ b/layouts/partials/home-about.html
@@ -1,13 +1,13 @@
 
-    <section class="py-lg-5 diagonal-box bg-muted">
-      <div class="container text-lg-left mt-3 content">
+    <section class="py-lg-5 bg-muted">
+      <div class="container text-lg-left mt-3">
 
         <div class="row">
           <div class="col-lg-12">
             <h2 class="display-4 text-muted">{{ .Site.Params.about.title }}</h2>
           </div>
         </div>
-        
+
         <div class="row">
           <div class="col-lg-6">
             <div class="row">
@@ -27,7 +27,7 @@
           </div>
           </div>
         </div>
- 
+
         <div class="row">
           <div class="mt-2 col-lg-12">
             </div>
