--- a/layouts/partials/team.html
+++ b/layouts/partials/team.html
@@ -1,6 +1,6 @@
 <!-- Team Start -->
-<section id="instagram" class="diagonal-box bg-white">
-  <div class="container content mb-5">
+<section id="instagram" class="bg-white">
+  <div class="container mb-5">
     <div class="text-center">
       <h2 class="display-5">Our core values</h2>
       <p class="lead">At Skyworkz we are people oriented. This means a healthy work/life balance, but also being empathic and transparent. We are curious, innovative and we have a good sense of humour. And, most of all: we are techies.</p>
