--- a/assets/scss/_variables.scss
+++ b/assets/scss/_variables.scss
@@ -8,8 +8,8 @@ $ionicons-font-path: "../fonts";
 $font-size-base: 1.4rem !default;
 $line-height-base: 2;
 
-$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "Open Sans", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
-$headings-font-family:        'Maven Pro', sans-serif;
+$font-family-sans-serif:      -apple-system, BlinkMacSystemFont, "proxima-nova", Montserrat, Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji" !default;
+$headings-font-family:        'proxima-nova', sans-serif;;
 $headings-margin-bottom: 0;
 
 $headings-line-height: 1;
@@ -17,25 +17,27 @@ $headings-line-height: 1;
 
 
 // Primary Color
-$blue:    #00B7ED;
-$indigo:  #706F6F; 
+    $blue:    #0E1539;
+$indigo:  #706F6F;
 $purple:  #29235C;
 $pink:    #A60067;
 $red:     #E30613;
-$orange:  #F39200;
+  $dark-orange:  #E05827;
+  $orange: #EB803A;
 $yellow:  #FFDD00;
 $green:   #28a745;
-$teal:    #00ACA9;
-$cyan:    #356C89;
+  $teal:    #9DDDEB;
+  $cyan:    #4B5791;
+;
 $black:   #1D1D1B;
 
 // Main Colors
 $color-main: $black;
 
 $theme-colors: (
-  "primary":    $teal,
-  "secondary":  $blue,
-  "danger":     $red,
+  "primary":    $blue,
+  "secondary":  $orange,
+  "danger":     $dark-orange,
   "success":    $green,
   "warning":    $yellow,
   "info":       $cyan,
@@ -44,6 +46,10 @@ $theme-colors: (
 );
 
 // Custom Color
+
+$color-gray-light: #E7E7E7;
+$color-gray-dark: #0E1539;
+
 
 $color-gray-light-v2: #f5f5f5;
 $color-gray-light-v3: #efeff4;
@@ -56,7 +62,7 @@ $color-blue-dark-v3: #363643;
 $color-blue-dark-v4: #33333f;
 $color-blue-dark-v5: #1D1D1B;
 
-$body-color: $color-gray-dark-v1;
+$body-color: $blue;
 
 $input-btn-padding-y: .45rem;
 $input-btn-padding-x: 2.4rem;
