--- a/layouts/partials/home-hero.html
+++ b/layouts/partials/home-hero.html
@@ -2,10 +2,10 @@
       <div class="container mt-lg-4 mb-4">
         <div class="row align-items-center">
           <div class="col-lg-8">
-            <h1 class="hero-heading mb-1 text-bold shadow-black">{{ .Site.Params.hero.title }}</h1>
+            <h1 class="hero-heading mb-1 text-bold shadow-black">Empowering companies to succeed <div class="font-italic">in the cloud</div></h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
-                <p class="hero-subtitle lead text-white mt-1 mb-4 shadow-black">{{ .Site.Params.hero.subtitle }}</p>
+                <p class="hero-subtitle lead text-white mt-1 mb-4 shadow-black"></p>
               </div>
             </div>
             <div class="row">
