--- a/layouts/partials/home-hero.html
+++ b/layouts/partials/home-hero.html
@@ -5,13 +5,13 @@
             <h1 class="hero-heading mb-1 text-bold shadow-black">Empowering companies to succeed <div class="font-italic">in the cloud</div></h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
-                <p class="hero-subtitle lead text-white mt-1 mb-4 shadow-black"></p>
+                <p class="hero-subtitle lead text-white mt-1 mb-4 shadow-black">We believe that genuine connection is the foundation of every successful journey. It's more than just bridging technologies; it's about linking aspirations, strategies, and potential to create cloud solutions that resonate and empower.</p>
               </div>
             </div>
             <div class="row">
               <div class="col">
-                <a href="/services" class="btn btn-warning btn-shadow text-uppercase me-lg-3">Learn how</a>
-                <a href="/contact" class="btn btn-outline-primary btn-shadow text-uppercase">Get in contact</a>
+                <a href="/services" class="btn btn-secondary btn-shadow text-uppercase me-lg-3">Learn how</a>
+                <a href="/contact" class="btn btn-outline-secondary btn-shadow text-uppercase">Get in contact</a>
                 </div>
             </div>
           </div>
