--- a/assets/scss/main.scss
+++ b/assets/scss/main.scss
@@ -24,15 +24,9 @@
 }
 
 .hero {
-  background-color: #264e63;
-  background:
-  linear-gradient(
-    180deg,
-    rgba(0, 0, 0, 0.8) 2rem,
-    rgba(0,0,0, 0) 60%,
-    rgba(0, 0, 0, 0.6) 90%
-  ),
-  url("data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' xmlns:xlink='http://www.w3.org/1999/xlink' width='100' height='50' viewBox='0 0 100 50'%3E%3Cdefs%3E%3Crect stroke='%23264e63' stroke-width='0.3' width='1' height='1' id='s'/%3E%3Cpattern id='a' width='2' height='2' patternUnits='userSpaceOnUse'%3E%3Cg stroke='%23264e63' stroke-width='0.3'%3E%3Crect fill='%232a5266' width='1' height='1'/%3E%3Crect fill='%23264e63' width='1' height='1' x='1' y='1'/%3E%3Crect fill='%232f5569' width='1' height='1' y='1'/%3E%3Crect fill='%2333596c' width='1' height='1' x='1'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='b' width='5' height='11' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23375c6f'%3E%3Cuse xlink:href='%23s' x='2' y='0'/%3E%3Cuse xlink:href='%23s' x='4' y='1'/%3E%3Cuse xlink:href='%23s' x='1' y='2'/%3E%3Cuse xlink:href='%23s' x='2' y='4'/%3E%3Cuse xlink:href='%23s' x='4' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='8'/%3E%3Cuse xlink:href='%23s' x='3' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='c' width='7' height='7' patternUnits='userSpaceOnUse'%3E%3Cg fill='%233c6073'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='3' y='4'/%3E%3Cuse xlink:href='%23s' x='5' y='6'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='d' width='11' height='5' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23264e63'%3E%3Cuse xlink:href='%23s' x='1' y='1'/%3E%3Cuse xlink:href='%23s' x='6' y='3'/%3E%3Cuse xlink:href='%23s' x='8' y='2'/%3E%3Cuse xlink:href='%23s' x='3' y='0'/%3E%3Cuse xlink:href='%23s' x='0' y='3'/%3E%3C/g%3E%3Cg fill='%23406376'%3E%3Cuse xlink:href='%23s' x='8' y='3'/%3E%3Cuse xlink:href='%23s' x='4' y='2'/%3E%3Cuse xlink:href='%23s' x='5' y='4'/%3E%3Cuse xlink:href='%23s' x='10' y='0'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='e' width='47' height='23' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23008987'%3E%3Cuse xlink:href='%23s' x='2' y='5'/%3E%3Cuse xlink:href='%23s' x='23' y='13'/%3E%3Cuse xlink:href='%23s' x='4' y='18'/%3E%3Cuse xlink:href='%23s' x='35' y='9'/%3E%3C/g%3E%3C/pattern%3E%3Cpattern id='f' width='61' height='31' patternUnits='userSpaceOnUse'%3E%3Cg fill='%23008987'%3E%3Cuse xlink:href='%23s' x='16' y='0'/%3E%3Cuse xlink:href='%23s' x='13' y='22'/%3E%3Cuse xlink:href='%23s' x='44' y='15'/%3E%3Cuse xlink:href='%23s' x='12' y='11'/%3E%3C/g%3E%3C/pattern%3E%3C/defs%3E%3Crect fill='url(%23a)' width='100' height='50'/%3E%3Crect fill='url(%23b)' width='100' height='50'/%3E%3Crect fill='url(%23c)' width='100' height='50'/%3E%3Crect fill='url(%23d)' width='100' height='50'/%3E%3Crect fill='url(%23e)' width='100' height='50'/%3E%3Crect fill='url(%23f)' width='100' height='50'/%3E%3C/svg%3E");
+  background-color: $blue;
+  background: url("/img/hero-background.png");
+
   background-size: cover;
 }
 
@@ -177,12 +171,12 @@ a {
   transition: all 0.3s;
   display: inline-block;
   font-weight: 600;
-  color: $teal;
+  color: $dark-orange;
 }
 
 a:hover {
   text-decoration: none;
-  color: $teal-700;
+  color: $dark-orange-700;
 }
 
 
@@ -211,7 +205,7 @@ a:hover {
   -webkit-box-pack: center;
   -ms-flex-pack: center;
   justify-content: center;
-  background: #F6AE2D;
+  background: $orange;
   display: block;
   opacity: 1;
   padding: 0;
@@ -229,7 +223,7 @@ button {
 }
 
 .bg-gray, .sidebar-widget {
-  background: #f5f5f5 !important;
+  background: $color-gray-light !important;
 }
 
 .breadcrumb {
@@ -250,7 +244,7 @@ button {
   width: 2rem;
   height: 2rem;
   line-height: 2rem;
-  background: #F6AE2D;
+  background: $orange;
   color: #fff;
   text-align: center;
   display: inline-block;
@@ -265,17 +259,17 @@ button {
 
 .form-control::-moz-placeholder {
   font-size: 0.95rem;
-  color: #aaa !important;
+  color: $color-gray-light !important;
 }
 
 .form-control::-webkit-input-placeholder {
   font-size: 0.95rem;
-  color: #aaa !important;
+  color: $color-gray-light !important;
 }
 
 .form-control:-ms-input-placeholder {
   font-size: 0.95rem;
-  color: #aaa !important;
+  color: $color-gray-light !important;
 }
 
 .breadcrumb-item + .breadcrumb-item::before {
@@ -459,7 +453,7 @@ STYLE SWITCHER FOR DEMO
   font-size: 4rem;
   line-height: 1;
   color: $orange;
-  text-shadow: 10px 10px 40px rgba(0,0,0,0.7);
+  text-shadow: 10px 10px 40px rgba(231,231,231,0.7);
 }
 
 @media (max-width: 991.98px) {
@@ -473,7 +467,7 @@ STYLE SWITCHER FOR DEMO
 }
 
 .hero-subtitle {
-  text-shadow: 10px 10px 40px rgba(0,0,0,0.5);
+  text-shadow: 10px 10px 40px rgba(231,231,231,0.5);
 }
 
 .subscription-form .form-group {
@@ -494,19 +488,19 @@ STYLE SWITCHER FOR DEMO
 .subscription-form input::-moz-placeholder {
   font-weight: 300;
   font-size: 0.9rem;
-  color: #aaa;
+  color: $color-gray-light;
 }
 
 .subscription-form input::-webkit-input-placeholder {
   font-weight: 300;
   font-size: 0.9rem;
-  color: #aaa;
+  color: $color-gray-light;
 }
 
 .subscription-form input:-ms-input-placeholder {
   font-weight: 300;
   font-size: 0.9rem;
-  color: #aaa;
+  color: $color-gray-light;
 }
 
 /* HERO MEDIAQUERY */
@@ -612,7 +606,7 @@ STYLE SWITCHER FOR DEMO
   border-radius: 0;
   border: none;
   margin-bottom: 1.3rem;
-  background: linear-gradient(45deg, #F6AE2D, #F6AE2D);
+  background: linear-gradient(45deg, $orange, $orange);
 }
 
 .accordion-custom .card-header {
@@ -682,13 +676,13 @@ STYLE SWITCHER FOR DEMO
 }
 
 .sidebar .search .form-control:focus {
-  border-color: #F6AE2D;
+  border-color: $orange;
 }
 
 .sidebar .search .form-control:focus + button {
-  background: #F6AE2D;
+  background: $orange;
   color: #fff;
-  border-color: #F6AE2D;
+  border-color: $orange;
 }
 
 .sidebar .search button {
@@ -701,7 +695,7 @@ STYLE SWITCHER FOR DEMO
   position: absolute;
   top: 0;
   right: 0;
-  color: #aaa;
+  color: $color-gray-light;
   border: 1px solid transparent;
   border-left: 0;
   cursor: pointer;
@@ -714,25 +708,25 @@ STYLE SWITCHER FOR DEMO
 }
 
 .categories-link {
-  color: #777;
+  color: $color-gray-dark;
   text-decoration: none;
   margin-bottom: 0.5rem;
 }
 
 .categories-link:hover {
-  color: #F6AE2D;
+  color: $orange;
   text-decoration: none;
 }
 
 .tag-link {
-  color: #777;
+  color: $color-gray-dark;
   padding: 0.5rem 1.2rem;
   background: #fff;
   margin: 0.2rem;
 }
 
 .tag-link:hover {
-  background: #F6AE2D;
+  background: $orange;
   color: #fff;
   text-decoration: none;
 }
@@ -836,13 +830,9 @@ span.navbar-toggler-icon {
  }
 
  .bg-pattern-dark {
-  background-color: $blue;
-  background-image: url("/img/hero-background.png");
- }
+  }
 
  .bg-hero {
-  background-color: $blue;
-  background-image: url("/img/hero-background.png");
  }
 
 a {
@@ -927,7 +917,7 @@ mark,
   padding: 2rem 1.5rem;
   margin-bottom: 2rem;
   font-size: 1.1rem;
-  border-left: 5px solid #F6AE2D;
+  border-left: 5px solid $orange;
   font-weight: 300;
   background: #f5f5f5;
   line-height: 1.8rem;
@@ -942,7 +932,7 @@ mark,
 }
 
 .text-primary {
-  color: #F6AE2D !important;
+  color: $orange !important;
 }
 
 a.text-primary:hover, a.text-primary:focus {
