--- a/layouts/partials/home-hero.html
+++ b/layouts/partials/home-hero.html
@@ -2,7 +2,7 @@
       <div class="container mt-lg-4 mb-4">
         <div class="row align-items-center">
           <div class="col-lg-8">
-            <h1 class="hero-heading mb-1 text-bold shadow-black">Empowering companies to succeed <div class="font-italic">in the cloud</div></h1>
+            <h1 class="hero-heading mb-1 text-bold shadow-black">Empowering companies to succeed <span class="text-italic">in the cloud</span></h1>
             <div class="row">
               <div class="col-lg-10 mt-2">
                 <p class="hero-subtitle lead text-white mt-1 mb-4 shadow-black">We believe that genuine connection is the foundation of every successful journey. It's more than just bridging technologies; it's about linking aspirations, strategies, and potential to create cloud solutions that resonate and empower.</p>
